--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prod_start": "set CODEIAL_ENVIRONMENT=production & nodemon index.js"
   },
   "keywords": [
     "social"
@@ -24,6 +25,7 @@
     "jsonwebtoken": "^9.0.0",
     "kue": "^0.11.6",
     "mongoose": "^6.7.5",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-sass": "^8.0.0",
     "node-sass-middleware": "^1.0.1",
@@ -32,6 +34,7 @@
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "rotating-file-stream": "^3.1.0",
     "socket.io": "^4.5.4"
   }
 }
