--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-rev": "^9.0.0",
+    "gulp-sass": "^5.1.0",
     "jsonwebtoken": "^9.0.0",
     "kue": "^0.11.6",
     "mongoose": "^6.7.5",
@@ -35,6 +38,10 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "rotating-file-stream": "^3.1.0",
+    "sass": "^1.62.0",
     "socket.io": "^4.5.4"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2"
   }
 }
